--- a/app/src/main/res/layout/activity_add_company.xml
+++ b/app/src/main/res/layout/activity_add_company.xml
@@ -1,140 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/addCompany_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     android:fitsSystemWindows="true"
     tools:context=".AddCompanyActivity"
     tools:openDrawer="start">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/addCompany_toolbar"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="#A57E0A"
             android:minHeight="?attr/actionBarSize"
             android:theme="?attr/actionBarTheme"
             app:title="  Add New Company"
-            app:titleTextAppearance="@style/TextAppearance.AppCompat.Display1" />
+            app:titleTextAppearance="@style/TextAppearance.AppCompat.Display1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="17dp" />
+        <!-- Using Chains for evenly spacing buttons -->
+        <Button
+            android:id="@+id/addCompany_btnSave"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
+            android:backgroundTint="#A39305"
+            android:text="Save"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/addCompany_btnCancel"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_chainStyle="spread"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/addCompany_toolbar" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="66dp"
-            android:orientation="horizontal">
+        <Button
+            android:id="@+id/addCompany_btnCancel"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
+            android:backgroundTint="#A39305"
+            android:text="Cancel"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/addCompany_btnSave"
+            app:layout_constraintTop_toBottomOf="@+id/addCompany_toolbar" />
 
-            <Space
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
+        <EditText
+            android:id="@+id/addCompany_etEmail"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="24dp"
+            android:ems="10"
+            android:hint="Email"
+            android:inputType="text|textEmailAddress"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/addCompany_btnSave" />
 
-            <Button
-                android:id="@+id/addCompany_btnSave"
-                android:layout_width="150dp"
-                android:layout_height="60dp"
-                android:layout_weight="1"
-                android:backgroundTint="#A39305"
-                android:text="Save"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+        <EditText
+            android:id="@+id/addCompany_etName"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="16dp"
+            android:ems="10"
+            android:hint="Enter Company Name"
+            android:inputType="text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/addCompany_etEmail" />
 
+        <EditText
+            android:id="@+id/addCompany_etPassword"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="16dp"
+            android:ems="10"
+            android:hint="Enter Password"
+            android:inputType="text|textPassword"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/addCompany_etName" />
 
-            <Space
-                android:layout_width="30dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
+        <EditText
+            android:id="@+id/addCompany_etConfirmPassword"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="16dp"
+            android:ems="10"
+            android:hint="Confirm Password"
+            android:inputType="text|textPassword"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/addCompany_etPassword" />
 
-            <Button
-                android:id="@+id/addCompany_btnCancel"
-                android:layout_width="150dp"
-                android:layout_height="60dp"
-                android:layout_weight="1"
-                android:backgroundTint="#A39305"
-                android:text="Cancel"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <Space
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
-        </LinearLayout>
-
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <EditText
-                android:id="@+id/addCompany_etEmail"
-                android:layout_width="350dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="80dp"
-                android:ems="10"
-                android:hint="Email"
-                android:inputType="text|textEmailAddress"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <EditText
-                android:id="@+id/addCompany_etName"
-                android:layout_width="350dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="48dp"
-                android:ems="10"
-                android:hint="Enter Company Name"
-                android:inputType="text"
-                app:layout_constraintEnd_toEndOf="@+id/addCompany_etEmail"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="@+id/addCompany_etEmail"
-                app:layout_constraintTop_toBottomOf="@+id/addCompany_etEmail" />
-
-            <EditText
-                android:id="@+id/addCompany_etPassword"
-                android:layout_width="350dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="48dp"
-                android:ems="10"
-                android:hint="Enter Password"
-                android:inputType="text|textPassword"
-                app:layout_constraintEnd_toEndOf="@+id/addCompany_etName"
-                app:layout_constraintHorizontal_bias="0.2"
-                app:layout_constraintStart_toStartOf="@+id/addCompany_etName"
-                app:layout_constraintTop_toBottomOf="@+id/addCompany_etName" />
-
-            <EditText
-                android:id="@+id/addCompany_etConfirmPassword"
-                android:layout_width="350dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="48dp"
-                android:ems="10"
-                android:hint="Confirm Password"
-                android:inputType="text|textPassword"
-                app:layout_constraintEnd_toEndOf="@+id/addCompany_etPassword"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/addCompany_etPassword"
-                app:layout_constraintTop_toBottomOf="@+id/addCompany_etPassword" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    </LinearLayout>
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-
         app:menu="@menu/nav_menu" />
+
 </androidx.drawerlayout.widget.DrawerLayout>
