--- a/app/src/main/res/layout/activity_add_coupon.xml
+++ b/app/src/main/res/layout/activity_add_coupon.xml
@@ -11,18 +11,18 @@
         android:id="@+id/addCoupon_imEnd"
         android:layout_width="34dp"
         android:layout_height="40dp"
+        android:onClick="onEndDateClick"
         app:layout_constraintBottom_toBottomOf="@+id/addCoupon_etEndDate"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/addCoupon_etEndDate"
         app:layout_constraintTop_toTopOf="@+id/addCoupon_etEndDate"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/calendar"
-        android:onClick="onEndDateClick"/>
-
+        app:srcCompat="@drawable/calendar" />
+    <!-- Toolbar -->
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/addCoupon_toolbar"
-        android:layout_width="409dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="#A57E0A"
         android:minHeight="?attr/actionBarSize"
@@ -37,27 +37,22 @@
 
     <Spinner
         android:id="@+id/addCoupon_spCategory"
-        android:layout_width="383dp"
-        android:layout_height="54dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="64dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.428"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addCoupon_toolbar" />
+        android:layout_width="371dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toBottomOf="@+id/addCoupon_btnBack"
+        tools:layout_editor_absoluteX="10dp" />
 
     <EditText
         android:id="@+id/addCoupon_etTitle"
-        android:layout_width="280dp"
-        android:layout_height="44dp"
-        android:layout_marginTop="20dp"
-        android:ems="10"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:hint="Title"
         android:inputType="text"
-        app:layout_constraintEnd_toEndOf="@+id/addCoupon_spCategory"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/addCoupon_spCategory"
-        app:layout_constraintTop_toBottomOf="@+id/addCoupon_spCategory" />
+        app:layout_constraintEnd_toEndOf="@id/addCoupon_spCategory"
+        app:layout_constraintStart_toStartOf="@id/addCoupon_spCategory"
+        app:layout_constraintTop_toBottomOf="@id/addCoupon_spCategory" />
 
     <EditText
         android:id="@+id/addCoupon_etDescription"
@@ -78,14 +73,14 @@
         android:layout_height="40dp"
         android:layout_marginTop="20dp"
         android:ems="10"
+        android:focusable="false"
         android:hint="Start Date"
         android:inputType="date"
+        android:onClick="onStartDateClick"
         app:layout_constraintEnd_toEndOf="@+id/addCoupon_etDescription"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/addCoupon_etDescription"
-        app:layout_constraintTop_toBottomOf="@+id/addCoupon_etDescription"
-        android:focusable="false"
-        android:onClick="onStartDateClick"/>
+        app:layout_constraintTop_toBottomOf="@+id/addCoupon_etDescription" />
 
     <EditText
         android:id="@+id/addCoupon_etEndDate"
@@ -93,14 +88,14 @@
         android:layout_height="40dp"
         android:layout_marginTop="20dp"
         android:ems="10"
+        android:focusable="false"
         android:hint="End Date"
         android:inputType="date"
+        android:onClick="onEndDateClick"
         app:layout_constraintEnd_toEndOf="@+id/addCoupon_etStartDate"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/addCoupon_etStartDate"
-        app:layout_constraintTop_toBottomOf="@+id/addCoupon_etStartDate"
-        android:focusable="false"
-        android:onClick="onEndDateClick"/>
+        app:layout_constraintTop_toBottomOf="@+id/addCoupon_etStartDate" />
 
     <EditText
         android:id="@+id/addCoupon_etAmount"
@@ -181,13 +176,13 @@
         android:id="@+id/addcoupon_imStart"
         android:layout_width="34dp"
         android:layout_height="40dp"
+        android:onClick="onStartDateClick"
         app:layout_constraintBottom_toBottomOf="@+id/addCoupon_etStartDate"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/addCoupon_etStartDate"
         app:layout_constraintTop_toTopOf="@+id/addCoupon_etStartDate"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/calendar"
-        android:onClick="onStartDateClick"/>
+        app:srcCompat="@drawable/calendar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
