--- a/app/src/main/res/layout/activity_manage_companies.xml
+++ b/app/src/main/res/layout/activity_manage_companies.xml
@@ -5,7 +5,6 @@
     android:id="@+id/manageCompanies_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     android:fitsSystemWindows="true"
     tools:context=".MainActivity"
     tools:openDrawer="start">
@@ -16,7 +15,7 @@
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/manageCompanies_toolbar"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="#F3C84A"
             android:minHeight="?attr/actionBarSize"
@@ -25,97 +24,71 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
-            android:id="@+id/linearLayout3"
-            android:layout_width="365dp"
-            android:layout_height="69dp"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="25dp"
-            android:layout_marginEnd="12dp"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
+        <Button
+            android:id="@+id/manageCompanies_btnAdd"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
+            android:backgroundTint="#A39305"
+            android:text="Add"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/manageCompanies_btnUpadate"
+            app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/manageCompanies_toolbar">
+            app:layout_constraintTop_toBottomOf="@+id/manageCompanies_toolbar" />
 
-            <Button
-                android:id="@+id/manageCompanies_btnAdd"
-                android:layout_width="150dp"
-                android:layout_height="60dp"
-                android:layout_weight="1"
-                android:backgroundTint="#A39305"
-                android:text="Add"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+        <Button
+            android:id="@+id/manageCompanies_btnUpadate"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
+            android:backgroundTint="#A39305"
+            android:text="Update"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/manageCompanies_btnDelete"
+            app:layout_constraintStart_toEndOf="@+id/manageCompanies_btnAdd"
+            app:layout_constraintTop_toTopOf="@+id/manageCompanies_btnAdd" />
 
-            <Space
-                android:layout_width="30dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
+        <Button
+            android:id="@+id/manageCompanies_btnDelete"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
+            android:backgroundTint="#A39305"
+            android:text="Delete"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/manageCompanies_btnUpadate"
+            app:layout_constraintTop_toTopOf="@+id/manageCompanies_btnUpadate" />
 
-            <Button
-                android:id="@+id/manageCompanies_btnUpadate"
-                android:layout_width="150dp"
-                android:layout_height="60dp"
-                android:layout_weight="1"
-                android:backgroundTint="#A39305"
-                android:text="Update"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <Space
-                android:layout_width="30dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
-
-            <Button
-                android:id="@+id/manageCompanies_btnDelete"
-                android:layout_width="150dp"
-                android:layout_height="60dp"
-                android:layout_weight="1"
-                android:backgroundTint="#A39305"
-                android:text="Delete"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/linearLayout4"
-            android:layout_width="365dp"
+        <EditText
+            android:id="@+id/manageCompanies_etCompanyCode"
+            android:layout_width="0dp"
             android:layout_height="55dp"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="25dp"
-            android:layout_marginEnd="12dp"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
-            app:layout_constraintStart_toStartOf="@+id/linearLayout3"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
+            android:hint="Company Code"
+            android:inputType="text"
+            app:layout_constraintEnd_toStartOf="@+id/manageCompanies_btnSearch"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/manageCompanies_btnAdd" />
 
-            <EditText
-                android:id="@+id/manageCompanies_etCompanyCode"
-                android:layout_width="271dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:ems="10"
-                android:hint="Company Code"
-                android:inputType="text" />
-
-            <ImageButton
-                android:id="@+id/manageCompanies_btnSearch"
-                android:layout_width="38dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                app:srcCompat="@android:drawable/ic_menu_search" />
-        </LinearLayout>
+        <ImageButton
+            android:id="@+id/manageCompanies_btnSearch"
+            android:layout_width="50dp"
+            android:layout_height="51dp"
+            android:backgroundTint="#A39305"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/manageCompanies_etCompanyCode"
+            app:layout_constraintTop_toTopOf="@+id/manageCompanies_etCompanyCode"
+            app:srcCompat="@android:drawable/ic_menu_search" />
 
         <FrameLayout
             android:id="@+id/manageCompanies_fragContainer"
-            android:layout_width="365dp"
-            android:layout_height="459dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/manageCompanies_etCompanyCode">
 
             <ListView
                 android:id="@+id/manageCompanies_lv"
@@ -123,7 +96,6 @@
                 android:layout_height="match_parent" />
 
         </FrameLayout>
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.navigation.NavigationView
@@ -131,6 +103,5 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-
         app:menu="@menu/nav_menu" />
 </androidx.drawerlayout.widget.DrawerLayout>
